--- a/btdhg.css
+++ b/btdhg.css
@@ -1,3 +1,9 @@
+html {
+    background-color: black;
+    color: white;
+    font-size: 2em;
+}
+
 .color-unique {
     color: #a59263;
 }
@@ -8,4 +14,37 @@
 
 .color-rune {
     color: #ffa500;
+}
+
+.grail-tabs {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin: 8px 0;
+}
+
+.tab {
+    margin: 8px;
+    padding: 8px;
+}
+
+.tab-active {
+    border-bottom: 1px solid;
+    border-bottom-color: white;
+}
+
+.search {
+    border-bottom: 1px solid;
+    border-bottom-color: grey;
+    width: 15%;
+    margin: 8px;
+    padding: 8px;
+}
+
+.search input {
+    width: 100%;
+    font-size: 1em;
+    border: none;
+    background: none;
+    color: white;
 }
