--- a/btdhg.css
+++ b/btdhg.css
@@ -11,7 +11,7 @@ html {
 }
 
 .container {
-    margin-bottom: 50px;
+    margin-bottom: 75px;
 }
 
 .header {
@@ -146,7 +146,7 @@ thead {
 }
 
 .tg td, .tg th {
-    border-color: white;
+    border-color: grey;
     border-style: solid;
     border-width: 1px;
     overflow: hidden;
